--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Cuidamos tu auto como si fuera nuestro</h1>
-							<h2>¡Ven a vernos! Haz clic para encontrar nuestra ubicación</h2>
+							<h2>¡Ven a vernos!</h2>
 							<p><a href="https://www.google.com/maps/place/MEC%C3%81NICA+MACHELO/@-6.7993637,-79.8351397,17z/data=!3m1!4b1!4m6!3m5!1s0x904ceff3ce8660bd:0x26cdea0a1020cee3!8m2!3d-6.7993637!4d-79.8351397!16s%2Fg%2F11r_vjl8bw?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D" class="btn btn-primary" target="_blank">Ir a Google Maps</a></p>
 						</div>
 					</div>
@@ -203,14 +203,13 @@
 				
 				<div class="fh5co-tabs">
 					<ul class="fh5co-tab-nav">
-						<li class="active"><a href="#" data-tab="1"><span class="visible-xs">S</span><span class="hidden-xs">Domingo</span></a></li>
-						<li><a href="#" data-tab="2"><span class="visible-xs">M</span><span class="hidden-xs">Lunes</span></a></li>
-						<li><a href="#" data-tab="3"><span class="visible-xs">T</span><span class="hidden-xs">Martes</span></a></li>
-						<li><a href="#" data-tab="4"><span class="visible-xs">W</span><span class="hidden-xs">Miércoles</span></a></li>
+						<li class="active"><a href="#" data-tab="1"><span class="visible-xs">L</span><span class="hidden-xs">Lunes</span></a></li>
+						<li><a href="#" data-tab="2"><span class="visible-xs">M</span><span class="hidden-xs">Martes</span></a></li>
+						<li><a href="#" data-tab="3"><span class="visible-xs">M</span><span class="hidden-xs">Miércoles</span></a></li>
 
-						<li><a href="#" data-tab="5"><span class="visible-xs">Th</span><span class="hidden-xs">Jueves</span></a></li>
-						<li><a href="#" data-tab="6"><span class="visible-xs">F</span><span class="hidden-xs">Viernes</span></a></li>
-						<li><a href="#" data-tab="7"><span class="visible-xs">S</span><span class="hidden-xs">Sábado</span></a></li>
+						<li><a href="#" data-tab="4"><span class="visible-xs">J</span><span class="hidden-xs">Jueves</span></a></li>
+						<li><a href="#" data-tab="5"><span class="visible-xs">V</span><span class="hidden-xs">Viernes</span></a></li>
+						<li><a href="#" data-tab="6"><span class="visible-xs">S</span><span class="hidden-xs">Sábado</span></a></li>
 					</ul>
 
 					<!-- Tabs -->
@@ -352,30 +351,6 @@
 								</li>
 							</ul>
 						</div>
-
-						<div class="fh5co-tab-content tab-content active" data-tab-content="7">
-							<ul class="class-schedule">
-								<li class="text-center">
-									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
-									<span class="time">8:00 AM - 5PM</span>
-									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
-								</li>
-								<li class="text-center">
-									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
-									<span class="time">1:00 PM - 5PM</span>
-									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
-								</li>
-								<li class="text-center">
-									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
-									<span class="time">8:00 AM - 5PM</span>
-									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
-								</li>
-							</ul>
-						</div>
-
 					</div>
 
 				</div>
