--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Fitness Expert</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Limpieza de inyectores</h2>
+					<p style="color: #F85A16;"><b>¿Tu vehículo presenta pérdida de potencia o un consumo elevado de combustible?</b></p>
+					<p> La limpieza de inyectores es esencial para restaurar el rendimiento de tu motor. Utilizamos tecnología avanzada para eliminar residuos y corrosión, mejorando la eficiencia y prolongando la vida útil de tus inyectores.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -140,15 +141,12 @@
 					<div class="trainer">
 						<a href="#"><img class="img-responsive" src="images/trainer-1.jpg" alt="trainer"></a>
 						<div class="title">
-							<h3><a href="#">Angel Adams</a></h3>
-							<span>Dance Expert</span>
+							<h3 style="color: #F85A16;">Paso 1: Diagnóstico</h3>
+							<span>Revisamos los inyectores</span>
 						</div>
 						<div class="desc text-center">
 							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="https://www.youtube.com/@mecanicamachelo3895" target="_blank"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -157,15 +155,12 @@
 					<div class="trainer">
 						<a href="#"><img class="img-responsive" src="images/trainer-2.jpg" alt="trainer"></a>
 						<div class="title">
-							<h3><a href="#">Arnold Smith</a></h3>
-							<span>Body Building Expert</span>
+							<h3 style="color: #F85A16;">Paso 2: Limpieza</h3>
+							<span>Eliminamos residuos</span>
 						</div>
 						<div class="desc text-center">
 							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="https://www.youtube.com/@mecanicamachelo3895" target="_blank"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -174,15 +169,12 @@
 					<div class="trainer">
 						<a href="#"><img class="img-responsive" src="images/trainer-3.jpg" alt="trainer"></a>
 						<div class="title">
-							<h3><a href="#">Rachel Seely</a></h3>
-							<span>Yoga Expert</span>
+							<h3 style="color: #F85A16;">Paso 3: Prueba</h3>
+							<span>Verificamos el rendimiento</span>
 						</div>
 						<div class="desc text-center">
 							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
+								<li><a href="https://www.youtube.com/@mecanicamachelo3895" target="_blank"><i class="icon-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
