--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="top">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 text-right">
+					<div class="col-xs-12 text-center">
 						<p class="num">Llamar: 979007259</p>
 					</div>
 				</div>
