--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 				<div class="row">
 					<div class="col-xs-12 text-center">
 						<p class="num">Llamar: 979007259</p>
+						<ul class="fh5co-social">
+							<li><a target="_blank" href="https://www.youtube.com/@mecanicamachelo3895"><i class="icon-youtube"></i></a></li>
+							<li><a target="_blank" href="https://www.facebook.com/p/Mec%C3%A1nica-Machelo-100076212041661/?_rdr"><i class="icon-facebook"></i></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -67,7 +71,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Machelo<span>.</span></a></div>
+						<div id="fh5co-logo">
+							<a href="index.html">
+								<span style="display: inline-block;"><img class="img-responsive" src="images/logo.png" alt=""></span>
+							</a> 
+						</div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
@@ -132,15 +140,18 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Limpieza de inyectores</h2>
-					<p style="color: #F85A16;"><b>¿Tu vehículo presenta pérdida de potencia o un consumo elevado de combustible?</b></p>
-					<p> La limpieza de inyectores es esencial para restaurar el rendimiento de tu motor. Utilizamos tecnología avanzada para eliminar residuos y corrosión, mejorando la eficiencia y prolongando la vida útil de tus inyectores.</p>
+					<h2>🚗💥 ¡SUPER PROMOCIÓN! 💥🚗</h2>
+					<h2>¡Recupera la potencia y eficiencia de tu motor!</h2>
+					<h2>¡Es hora de una limpieza de inyectores!</h2>
+					<p style="color: #F85A16;"><b>🔧 ¿Por qué es importante?</b></p>
+					<p> La limpieza de inyectores es crucial para restaurar el rendimiento de tu motor. Eliminamos residuos y corrosión utilizando tecnología avanzada, lo que mejora la eficiencia del combustible y prolonga la vida útil de tus inyectores. No dejes que un inyector obstruido afecte el funcionamiento de tu vehículo. <br> ¡Dile adiós a los problemas de potencia y consumo elevado!</p>
+					<p style="color: #F85A16;"><b>🔧 Proceso de Limpieza de Inyectores en Mecánica Machelo</b></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 animate-box">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-1.jpg" alt="trainer"></a>
+						<a href="#"><img class="img-responsive" src="images/service_1.png" alt="trainer"></a>
 						<div class="title">
 							<h3 style="color: #F85A16;">Paso 1: Diagnóstico</h3>
 							<span>Revisamos los inyectores</span>
@@ -154,7 +165,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-2.jpg" alt="trainer"></a>
+						<a href="#"><img class="img-responsive" src="images/service_2.png" alt="trainer"></a>
 						<div class="title">
 							<h3 style="color: #F85A16;">Paso 2: Limpieza</h3>
 							<span>Eliminamos residuos</span>
@@ -168,7 +179,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-3.jpg" alt="trainer"></a>
+						<a href="#"><img class="img-responsive" src="images/service_3.png" alt="trainer"></a>
 						<div class="title">
 							<h3 style="color: #F85A16;">Paso 3: Prueba</h3>
 							<span>Verificamos el rendimiento</span>
