--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo">
+						<div id="fh5co-logo" class="visible-xs"><a href="index.html">Machelo<span>.</span></a></div>
+						<div id="fh5co-logo" class="hidden-xs">
 							<a href="index.html">
 								<span style="display: inline-block;"><img class="img-responsive" src="images/logo.png" alt=""></span>
 							</a> 
