--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
 	<div id="fh5co-trainer">
 		<div class="container">
 			<div class="row animate-box">
+				<div class="promo-badge visible-xs">🚗💥 ¡SUPER PROMOCIÓN! 💥🚗</div>
+				<div class="promo-badge-2 hidden-xs">🚗💥 ¡SUPER PROMOCIÓN! 💥🚗</div>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>🚗💥 ¡SUPER PROMOCIÓN! 💥🚗</h2>
+
 					<h2>¡Recupera la potencia y eficiencia de tu motor!</h2>
 					<h2>¡Es hora de una limpieza de inyectores!</h2>
 					<p style="color: #F85A16;"><b>🔧 ¿Por qué es importante?</b></p>
