--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center">
-						<p class="num">Llamar: 979007259</p>
+						<p class="num">
+							<a href="tel:979007259" style="text-decoration: none; color: inherit;">Llamar al 979007259</a>
+						</p>
 						<ul class="fh5co-social">
 							<li><a target="_blank" href="https://www.youtube.com/@mecanicamachelo3895"><i class="icon-youtube"></i></a></li>
 							<li><a target="_blank" href="https://www.facebook.com/p/Mec%C3%A1nica-Machelo-100076212041661/?_rdr"><i class="icon-facebook"></i></a></li>
@@ -227,19 +229,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
@@ -250,19 +252,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
@@ -273,19 +275,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
@@ -296,19 +298,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
@@ -319,19 +321,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
@@ -342,19 +344,19 @@
 									<span><img src="images/dumbbell.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Mecánica General</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/yoga-carpet.svg" class="img-responsive" alt=""></span>
 									<span class="time">1:00 PM - 5PM</span>
 									<h4>Diagnóstico Electrónico</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 								<li class="text-center">
 									<span><img src="images/ballet.svg" class="img-responsive" alt=""></span>
 									<span class="time">8:00 AM - 5PM</span>
 									<h4>Venta de Repuestos</h4>
-									<small>Angel Adams</small>
+									<small>Marcelo Sánchez</small>
 								</li>
 							</ul>
 						</div>
